# challenge-cesar

./: .gitignore  README.md  main.py  pyproject.toml
docs/: DETALLE_ARQUITECTURA_Y_MODELO.md  EJEMPLOS_DE_USO.md  JUSTIFICACION_OFENSIVA.md
open_ldap_files/: docker-compose-meli-challenge.yml  docker-compose-meli-challenge.yml1
src/: __init__.py  config.py  ldap_client.py
src/agents/: __init__.py  auditor.py  coordinator.py  generator.py
src/tools/: __init__.py  base_tools.py  dynamic_tools.py
tests/: __init__.py  conftest.py  test_agent_and_dynamic_tools.py  test_base_tools.py  test_ldap_client.py
